@startuml

title __SECURITY's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace security {
      class com.unisa.cinehub.security.ConfigureUIServiceInitListener {
          + serviceInit()
          - authenticateNavigation()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace security {
      class com.unisa.cinehub.security.CustomAuthenticationFailureHandler {
          + CustomAuthenticationFailureHandler()
          + onAuthenticationFailure()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace security {
      class com.unisa.cinehub.security.CustomRequestCache {
          + saveRequest()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace security {
      class com.unisa.cinehub.security.SecurityConfiguration {
          {static} - LOGIN_FAILURE_URL : String
          {static} - LOGIN_PROCESSING_URL : String
          {static} - LOGIN_URL : String
          {static} - LOGOUT_SUCCESS_URL : String
          + authenticationManagerBean()
          + configure()
          + passwordEncoder()
          # configure()
          # configure()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace security {
      class com.unisa.cinehub.security.SecurityUtils {
          {static} - utenteService : UtenteService
          + SecurityUtils()
          {static} + getLoggedIn()
          {static} + isUserLoggedIn()
          {static} ~ isFrameworkInternalRequest()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace security {
      class com.unisa.cinehub.security.UtenteDetailsService {
          + loadUserByUsername()
      }
    }
  }
  

  com.unisa.cinehub.security.ConfigureUIServiceInitListener .up.|> com.vaadin.flow.server.VaadinServiceInitListener
  com.unisa.cinehub.security.CustomAuthenticationFailureHandler -up-|> org.springframework.security.web.authentication.SimpleUrlAuthenticationFailureHandler
  com.unisa.cinehub.security.CustomRequestCache -up-|> org.springframework.security.web.savedrequest.HttpSessionRequestCache
  com.unisa.cinehub.security.SecurityConfiguration -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  com.unisa.cinehub.security.SecurityConfiguration o-- com.unisa.cinehub.security.UtenteDetailsService : userDetailsService
  com.unisa.cinehub.security.UtenteDetailsService .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.unisa.cinehub.security.UtenteDetailsService o-- com.unisa.cinehub.model.utente.RecensoreRepository : recensoreRepository
  com.unisa.cinehub.security.UtenteDetailsService o-- com.unisa.cinehub.model.utente.UtenteRepository : utenteRepository
  com.unisa.cinehub.security.UtenteDetailsService o-- com.unisa.cinehub.model.utente.UtenteService : utenteService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
